--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,22 +17,32 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <<%= link_to 'Kalibracja', root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
+      <% if current_admin %>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Formularze <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Page 1-1</a></li>
-            <li><a href="#">Page 1-2</a></li>
-            <li><a href="#">Page 1-3</a></li>
+            <li><%= link_to 'Lista sprzętu', equipment_index_path %></li>
+			
+			<li><%= link_to 'Miejsca użytkowania', places_path %></li>
+			
+			<li><%= link_to 'Metody weryfikacji', verifications_path %></li>
           </ul>
         </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Baza <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to 'Nowy sprzęt', new_equipment_path %></li>
+			
+			<li><%= link_to 'Nowe miejsce', new_place_path %></li>
+			
+			<li><%= link_to 'Nowe metody weryfikacji', new_verification_path %></li>
+          </ul>
+        </li>
+      </ul> 
       <form class="navbar-form navbar-left">
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Search">
@@ -41,11 +51,20 @@
             <i class="glyphicon glyphicon-search"></i>
           </button>
         </div>
-      </div>
+      </div>  
     </form>
+    <%end%>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      	<% if current_admin %>
+      	
+      	<li><%= link_to ' Rejestruj', new_user_registration_path, class: 'glyphicon glyphicon-user' %></li>
+      	<%end%>
+      	<% if current_admin || current_user%>
+        <li ><%= link_to ' Wyloguj', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out' %></li>
+        <%else%>
+        <li><%= link_to ' Loguj', new_user_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <li><%= link_to ' Admin', new_admin_session_path, class: 'glyphicon glyphicon-log-in' %></li>
+        <%end%>
       </ul>
     </div>
   </div>
