add table equpment_types_laboratories

--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -47,13 +47,18 @@
   </div>
 
   <div class="field">
-    <%= f.label :brand_id %>
-    <%= f.number_field :brand_id %>
+    <%= f.label :equipment_type_id %>
+    <%= f.number_field :equipment_type_id %>
   </div>
 
   <div class="field">
     <%= f.label :place_id %>
     <%= f.number_field :place_id %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :production_date %>
+    <%= f.number_field :production_date %>
   </div>
 
   <div class="actions">
