--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -36,8 +36,8 @@
 </p>
 
 <p>
-  <strong>Brand:</strong>
-  <%= @equipment.brand_id %>
+  <strong>Equipment type:</strong>
+  <%= @equipment.equpment_type_id %>
 </p>
 
 <p>
