--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -30,7 +30,7 @@
         <td><%= equipment.verification_result %></td>
         <td><%= equipment.user.email %></td>
         <td><%= equipment.admin.email %></td>
-        <td><%= equipment.brand.e_brand %></td>
+        <td><%= equipment.equipment_type.type_of_equipment %></td>
         <td><%= equipment.place.place_of_use %></td>
         <td><%= link_to 'Show', equipment %></td>
         <td><%= link_to 'Edit', edit_equipment_path(equipment) %></td>
