--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Equipment type:</strong>
-  <%= @equipment.equpment_type_id %>
+  <%= @equipment.equipment_type_id %>
 </p>
 
 <p>
