--- a/app/views/equipment_types/show.html.erb
+++ b/app/views/equipment_types/show.html.erb
@@ -9,6 +9,10 @@
   <strong>Producer:</strong>
   <%= @equipment_type.producer_id %>
 </p>
+<p>
+  <strong>Producer:</strong>
+  <%= @equipment_type.verification_id %>
+</p>
 
 <%= link_to 'Edit', edit_equipment_type_path(@equipment_type) %> |
 <%= link_to 'Back', equipment_types_path %>
