--- a/app/views/producers/show.html.erb
+++ b/app/views/producers/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>ID:</strong>
+  <%= @producer.id %>
+</p>
+<p>
   <strong>Producer name:</strong>
   <%= @producer.producer_name %>
 </p>
