--- a/app/views/verifications/show.html.erb
+++ b/app/views/verifications/show.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <strong>Type of verification:</strong>
+  <%= @verification.id %>
+</p>
 <p>
   <strong>Type of verification:</strong>
   <%= @verification.type_of_verification %>
